# GraphRAG-on-law

./: .gitignore  README.md  pyproject.toml  scraper.py
